avoids overlapping cancel/save buttons

--- a/widgy/static/widgy/css/widgy_theme_default.scss
+++ b/widgy/static/widgy/css/widgy_theme_default.scss
@@ -394,9 +394,7 @@ $font-default: "Open Sans", Arial, Helvetica, sans-serif;
   }
 
   .cancel {
-    position: absolute;
-    right: 55px;
-    top: 0px;
+    float: right;
   }
 }
 
